--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@ Temporary Items
 /tools/LinuxOneShot/TGS_Config
 /tools/LinuxOneShot/TGS_Instances
 /tools/LinuxOneShot/TGS_Logs
+
+# Common build tooling SKYRAT EDIT
+!/tools/build
+tgui/public/tgui-common.bundle.js
