--- a/.gitignore
+++ b/.gitignore
@@ -191,6 +191,5 @@ Temporary Items
 /tools/LinuxOneShot/TGS_Instances
 /tools/LinuxOneShot/TGS_Logs
 
-# Common build tooling SKYRAT EDIT
-!/tools/build
-tgui/public/tgui-common.bundle.js
+# TGUI bundles - SKYRAT EDIT
+/tgui/public/tgui-common.bundle.js
