--- a/.github/workflows/generate_documentation.yml
+++ b/.github/workflows/generate_documentation.yml
@@ -20,12 +20,12 @@ jobs:
         run: |
           ~/dmdoc
           touch dmdoc/.nojekyll
-          echo rogue-life.github.io/Rogue-Station/ > dmdoc/CNAME
+          echo codedocs.tgstation13.org > dmdoc/CNAME
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           BRANCH: gh-pages
           CLEAN: true
-          GITHUB_TOKEN: ${{ secrets.CHANGEDOC }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SINGLE_COMMIT: true
           FOLDER: dmdoc
