--- a/.github/workflows/gbp.yml
+++ b/.github/workflows/gbp.yml
@@ -11,4 +11,4 @@ jobs:
     - name: GBP action
       uses: tgstation/gbp-action@master
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.WORKFLOWS }}
