--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,12 +12,11 @@
 /modular_skyrat/modules/apocolypse_of_scythes/ @jjpark-kb
 /modular_skyrat/modules/ash_chemical_centrifuge/ @jjpark-kb
 /modular_skyrat/modules/ash_farming/ @jjpark-kb
-/modular_skyrat/modules/ashwalker_change/ @jjpark-kb
-/modular_skyrat/modules/ashwalker_shaman/ @jjpark-kb
+/modular_skyrat/modules/antagonists/ashwalker/ @jjpark-kb
 /modular_skyrat/modules/borg_buffs/ @jjpark-kb
 /modular_skyrat/modules/cargo_teleporter/ @jjpark-kb
 /modular_skyrat/modules/conveyor_sorter/ @jjpark-kb
-/modular_skyrat/modules/cortical_borer/ @jjpark-kb
+/modular_skyrat/modules/antagonists\cortical_borer/ @jjpark-kb
 /modular_skyrat/modules/connecting_computer/ @jjpark-kb
 /modular_skyrat/modules/fishing/ @jjpark-kb
 /modular_skyrat/modules/positronic_alert_console/ @jjpark-kb
@@ -32,7 +31,7 @@
 # Zonepace
 /modular_skyrat/master_files/code/modules/client/preferences/headshot.dm @Zonespace27
 /modular_skyrat/modules/contractor/ @Zonespace27
-/modular_skyrat/modules/lorecaster/ @Zonespace27
+/modular_skyrat/modules/antagonists/ @Zonespace27
 
 # Multiple Owners
 
