--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,7 +16,7 @@
 /modular_skyrat/modules/borg_buffs/ @jjpark-kb
 /modular_skyrat/modules/cargo_teleporter/ @jjpark-kb
 /modular_skyrat/modules/conveyor_sorter/ @jjpark-kb
-/modular_skyrat/modules/antagonists\cortical_borer/ @jjpark-kb
+/modular_skyrat/modules/antagonists/cortical_borer/ @jjpark-kb
 /modular_skyrat/modules/connecting_computer/ @jjpark-kb
 /modular_skyrat/modules/fishing/ @jjpark-kb
 /modular_skyrat/modules/positronic_alert_console/ @jjpark-kb
