--- a/_maps/skyrat/automapper/automapper_config.toml
+++ b/_maps/skyrat/automapper/automapper_config.toml
@@ -67,6 +67,14 @@ required_map = "MetaStation.dmm"
 coordinates = [57, 119, 1]
 trait_name = "Station"
 
+# Metastation Prison Privacy
+[templates.metastation_prison_privacy]
+map_files = ["metastation_prison_privacy.dmm"]
+directory = "_maps/skyrat/automapper/templates/metastation/"
+required_map = "MetaStation.dmm"
+coordinates = [82, 180, 1]
+trait_name = "Station"
+
 # DELTASTATION MAP EDITS
 # Deltastation Arrivals
 [templates.deltastation_arrivals]
