--- a/_maps/skyrat/automapper/automapper_config.toml
+++ b/_maps/skyrat/automapper/automapper_config.toml
@@ -262,3 +262,11 @@ directory = "_maps/skyrat/automapper/templates/tramstation/"
 required_map = "tramstation.dmm"
 coordinates = [135, 162, 2]
 trait_name = "Station"
+
+# Tramstation Prison Privacy
+[templates.tramstation_prison_privacy]
+map_files = ["tramstation_prison_privacy.dmm"]
+directory = "_maps/skyrat/automapper/templates/tramstation/"
+required_map = "tramstation.dmm"
+coordinates = [89, 156, 1]
+trait_name = "Station"
